--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=BookingService
 server.port=5002
-db.service.url=http://db-service-aws:5000/api/datastore
+db.service.url=http://localhost:5000/api/datastore
 
 # Hibernate JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
